# example-greeting-service

./: .editorconfig  .envrc_example  .gitignore  .tool-versions  DEVELOPING.md  README.md  Tiltfile  Tiltfile.k8s  config.yaml  docker-compose.dotnet.yml  docker-compose.elixir.yml  docker-compose.java.yml  docker-compose.node.yml  docker-compose.python.yml  docker-compose.web.yml  docker-compose.yml  otel-collector-config.yaml  otelconf.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  security-vulnerability-report.md
.github/workflows/: publish-ghcr.yml
dotnet/: .editorconfig  README.md  Tiltfile  docker-compose.yml  dotnet.sln
dotnet/frontend/: Dockerfile  Program.cs  Startup.cs  appsettings.json  frontend.csproj
dotnet/message-service/: Dockerfile  Program.cs  Startup.cs  appsettings.json  message-service.csproj
dotnet/name-service/: BaggageActivityProcessor.cs  BaggageSpanProcessor.cs  Dockerfile  Program.cs  Startup.cs  appsettings.json  name-service.csproj
dotnet/year-service/: BaggageActivityProcessor.cs  BaggageSpanProcessor.cs  Dockerfile  HoneycombBuilder.cs  Program.cs  Startup.cs  WeatherForecast.cs  appsettings.json  year-service.csproj
elixir/: .editorconfig  README.md  docker-compose.yml
elixir/frontend/: .gitignore  Dockerfile  mix.exs
elixir/message/: .gitignore  Dockerfile  mix.exs
elixir/name/: .gitignore  Dockerfile  mix.exs
elixir/year/: .gitignore  .tool-versions  Dockerfile  mix.exs
gateway/: Dockerfile  index.html  nginx.conf  otel-conf.toml  proxies.conf
go-auto-instrumented/: README.md  docker-compose.yml  go.mod  greetings-instrumented.yaml  greetings.yaml  otel-collector.yaml
go-auto-instrumented/frontend/: Dockerfile  frontend.yaml  main.go
go-auto-instrumented/greetings/: frontend.yaml  kustomization.yaml  message.yaml  name.yaml  year.yaml
go-auto-instrumented/message-service/: Dockerfile  main.go  message.yaml
go-auto-instrumented/name-service/: Dockerfile  main.go  name.yaml
go-auto-instrumented/operator/: collector.yaml  instrumentation.yaml
go-auto-instrumented/year-service/: Dockerfile  README.md  go.mod  otel-collector.yaml  year-instrumented.yaml  year.yaml
go-uninstrumented/: README.md  docker-compose.yml  go.mod  greetings.yaml
go-uninstrumented/frontend/: Dockerfile
go-uninstrumented/frontend-service/: Dockerfile  main.go
go-uninstrumented/message-service/: Dockerfile
go-uninstrumented/name-service/: Dockerfile
go-uninstrumented/year-service/: Dockerfile  main.go
golang/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  greetings-gateway.yaml  greetings.yaml  otel-collector.yaml  tracing.yaml  year-only.yaml
golang/frontend/: Dockerfile  go.mod  go.sum  main.go
golang/message-service/: Dockerfile  go.mod  go.sum  main.go
golang/name-service/: Dockerfile  go.mod  go.sum  main.go  test.go
golang/year-service/: Dockerfile  README.md  go.mod  go.sum  main-otlp.go  main.go  year.yaml
java/: .editorconfig  docker-compose.yml
java/frontend/: Dockerfile  build.gradle  settings.gradle
java/message-service/: .gitignore  Dockerfile  build.gradle  settings.gradle
java/name-service/: Dockerfile  build.gradle  settings.gradle
java/year-service/: Dockerfile  build.gradle  gradlew  settings.gradle
node/: .editorconfig  .gitignore  README.md  docker-compose.yml
node/frontend/: Dockerfile  main.js  package-lock.json  package.json  tracing.js
node/frontend-service/: .prettierrc.js  Dockerfile  main.js  package-lock.json  package.json  tracing.js
node/message-service/: Dockerfile  main.js  package-lock.json  package.json
node/name-service/: Dockerfile  main.js  package-lock.json  package.json  tracing.js
python/: .editorconfig  .tool-versions  README.md  docker-compose.yml
python/frontend/: Dockerfile  README.rst  pyproject.toml
python/frontend/frontend/: __init__.py  __main__.py
python/frontend/tests/: test_frontend.py
python/message-service/: Dockerfile  README.rst  pyproject.toml
python/message-service/message_service/: __main__.py
python/message-service/tests/: test_message_service.py
python/name-service/: .flaskenv  Dockerfile  README.rst  pyproject.toml
python/name-service/name_service/: __init__.py
python/name-service/tests/: test_name_service.py
python/year-service/: Dockerfile  README.rst  pyproject.toml
python/year-service/tests/: test_year_service.py
python/year-service/yearservice/: manage.py
python/year-service/yearservice/yearapp/: __init__.py  apps.py  views.py
python/year-service/yearservice/yearservice/: asgi.py  settings.py  urls.py  wsgi.py
ruby/: .editorconfig  .envrc_example  docker-compose.yml
web/: .eslintignore  .eslintrc.js  .prettierignore  Dockerfile  README.md  package-lock.json  package.json  webpack.config.js
(+115 files in other folders)
