[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Honeycomb"]

[tool.poetry.dependencies]
python = "^3.10"
werkzeug = "^2.3.3"
honeycomb-beeline = "^3.5.2"
[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
