[tool.poetry]
name = "message-service"
version = "0.1.0"
description = ""
authors = ["Douglas Soo <doug@honeycomb.io>"]

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.20"
opentelemetry-api = "^1.15.0"
opentelemetry-sdk = "^1.15.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.15.0"
opentelemetry-instrumentation-requests = "^0.36b0"
opentelemetry-instrumentation-wsgi = "^0.36b0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
