[tool.poetry]
name = "message-service"
version = "0.1.0"
description = ""
authors = ["Honeycomb"]

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.25"
opentelemetry-api = "^1.16.0"
opentelemetry-sdk = "^1.16.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.16.0"
opentelemetry-instrumentation-requests = "^0.37b0"
opentelemetry-instrumentation-wsgi = "^0.37b0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
