[tool.poetry]
name = "name-service"
version = "0.1.0"
description = ""
authors = ["Honeycomb"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
opentelemetry-api = "^1.16.0"
honeycomb-opentelemetry = "0.1.2b0"
opentelemetry-instrumentation-requests = "0.37b0"
opentelemetry-instrumentation-flask = "0.37b0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
autopep8 = "^2.0.1"
