[tool.poetry]
name = "name-service"
version = "0.1.0"
description = ""
authors = ["Honeycomb"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-distro = "^0.44b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.23.0"
opentelemetry-instrumentation-requests = "^0.44b0"
opentelemetry-instrumentation-flask = "^0.44b0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
autopep8 = "^2.0.4"
